--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="style/style.scss">
+    <link rel="stylesheet" href="./style/style.scss">
 </head>
 <body>
     <nav>
         <ul class="nav-list">
-            <li><a class="nav-links" href="index.html">Home</a></li>
-            <li><a class="nav-links" href="about.html">About</a></li>
-            <li><a class="nav-links" href="contact.html">Contact</a></li>
+            <li><a class="nav-links" href="./index.html">Home</a></li>
+            <li><a class="nav-links" href="./about.html">About</a></li>
+            <li><a class="nav-links" href="./contact.html">Contact</a></li>
         </ul>
     </nav>
 
@@ -28,6 +28,6 @@
     </main>
 
 
-    <script src="js/index.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 </html>
